external-crates/move/crates/move-compiler/tests/move_check/feature_gate/macro_definition.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_definition.move:2:12
  │
2 │     public macro fun do($f: || ()) { $f() }
  │            ^^^^^ 'macro' functions are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_definition.move:2:38
  │
2 │     public macro fun do($f: || ()) { $f() }
  │                                      ^^^^ lambda expressions are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

