external-crates/move/crates/move-compiler/tests/move_check/feature_gate/macro_definition.move
module a::m {
    public macro fun do($f: || ()) { $f() }
}
